--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "multer": "^2.0.2",
     "pg": "^8.17.2",
     "sqlite3": "^5.1.6",
     "uuid": "^9.0.1"
